# rtableau

./: DESCRIPTION  NAMESPACE  README.md  configure  configure.ac
R/: RcppExports.R  rtableau.R  write_tde.R
inst/include/: TableauCommon.h  TableauCommon_cpp.h  TableauExtract.h  TableauExtract_cpp.h  TableauServer.h  TableauServer_cpp.h
man/: publish_tde.Rd  rtableau.Rd  write_tde.Rd
src/: Makevars  Makevars.in  RcppExports.cpp  publish_tde.cpp  write_tde.cpp
